.playwright-mcp/console-2026-02-15T11-04-13-437Z.log
[      69ms] [ERROR] Failed to load resource: the server responded with a status of 500 (Internal Server Error) @ http://localhost:3002/:0
[     107ms] Error: ./app/globals.css
Error evaluating Node.js code
CssSyntaxError: /Users/dikim02/Documents/cafe24/my/irusol-landing/app/globals.css:1:1: The `bg-background` class does not exist. If `bg-background` is a custom class, make sure it is defined within a `@layer` directive.
    [at Input.error (turbopack:///[project]/node_modules/postcss/lib/input.js:135:16)]
    [at AtRule.error (turbopack:///[project]/node_modules/postcss/lib/node.js:146:32)]
    [at processApply (/Users/dikim02/Documents/cafe24/my/irusol-landing/node_modules/tailwindcss/lib/lib/expandApplyAtRules.js:380:29)]
    [at /Users/dikim02/Documents/cafe24/my/irusol-landing/node_modules/tailwindcss/lib/lib/expandApplyAtRules.js:551:9]
    [at /Users/dikim02/Documents/cafe24/my/irusol-landing/node_modules/tailwindcss/lib/processTailwindFeatures.js:55:50]
    [at async plugins (/Users/dikim02/Documents/cafe24/my/irusol-landing/node_modules/tailwindcss/lib/plugin.js:38:17)]
    [at async LazyResult.runAsync (turbopack:///[project]/node_modules/postcss/lib/lazy-result.js:293:11)]
    [at async transform (turbopack:///[turbopack-node]/transforms/postcss.ts:70:34)]
    [at async run (turbopack:///[turbopack-node]/ipc/evaluate.ts:92:23)]

Import trace:
  Client Component Browser:
    ./app/globals.css [Client Component Browser]
    ./app/layout.tsx [Server Component]


    at Object.getCompilationErrors (file:///Users/dikim02/Documents/cafe24/my/irusol-landing/node_modules/next/dist/server/dev/hot-reloader-turbopack.js:775:59)
    at DevBundlerService.getCompilationError (file:///Users/dikim02/Documents/cafe24/my/irusol-landing/node_modules/next/dist/server/lib/dev-bundler-service.js:39:55)
    at DevServer.getCompilationError (file:///Users/dikim02/Documents/cafe24/my/irusol-landing/node_modules/next/dist/server/dev/next-dev-server.js:721:42)
    at DevServer.findPageComponents (file:///Users/dikim02/Documents/cafe24/my/irusol-landing/node_modules/next/dist/server/dev/next-dev-server.js:691:43)
    at async DevServer.renderErrorToResponseImpl (file:///Users/dikim02/Documents/cafe24/my/irusol-landing/node_modules/next/dist/server/base-server.js:1687:26)
[     107ms] [ERROR] ./app/globals.css
Error evaluating Node.js code
CssSyntaxError: /Users/dikim02/Documents/cafe24/my/irusol-landing/app/globals.css:1:1: The `bg-background` class does not exist. If `bg-background` is a custom class, make sure it is defined within a `@layer` directive.
    [at Input.error (turbopack:///[project]/node_modules/postcss/lib/input.js:135:16)]
    [at AtRule.error (turbopack:///[project]/node_modules/postcss/lib/node.js:146:32)]
    [at processApply (/Users/dikim02/Documents/cafe24/my/irusol-landing/node_modules/tailwindcss/lib/lib/expandApplyAtRules.js:380:29)]
    [at /Users/dikim02/Documents/cafe24/my/irusol-landing/node_modules/tailwindcss/lib/lib/expandApplyAtRules.js:551:9]
    [at /Users/dikim02/Documents/cafe24/my/irusol-landing/node_modules/tailwindcss/lib/processTailwindFeatures.js:55:50]
    [at async plugins (/Users/dikim02/Documents/cafe24/my/irusol-landing/node_modules/tailwindcss/lib/plugin.js:38:17)]
    [at async LazyResult.runAsync (turbopack:///[project]/node_modules/postcss/lib/lazy-result.js:293:11)]
    [at async transform (turbopack:///[turbopack-node]/transforms/postcss.ts:70:34)]
    [at async run (turbopack:///[turbopack-node]/ipc/evaluate.ts:92:23)]

Import trace:
  Client Component Browser:
    ./app/globals.css [Client Component Browser]
    ./app/layout.tsx [Server Component] @ http://localhost:3002/_next/static/chunks/node_modules_next_dist_5b402162._.js:1747
[     139ms] [ERROR] ./app/globals.css
Error evaluating Node.js code
CssSyntaxError: /Users/dikim02/Documents/cafe24/my/irusol-landing/app/globals.css:1:1: The `bg-background` class does not exist. If `bg-background` is a custom class, make sure it is defined within a `@layer` directive.
    [at Input.error (turbopack:///[project]/node_modules/postcss/lib/input.js:135:16)]
    [at AtRule.error (turbopack:///[project]/node_modules/postcss/lib/node.js:146:32)]
    [at processApply (/Users/dikim02/Documents/cafe24/my/irusol-landing/node_modules/tailwindcss/lib/lib/expandApplyAtRules.js:380:29)]
    [at /Users/dikim02/Documents/cafe24/my/irusol-landing/node_modules/tailwindcss/lib/lib/expandApplyAtRules.js:551:9]
    [at /Users/dikim02/Documents/cafe24/my/irusol-landing/node_modules/tailwindcss/lib/processTailwindFeatures.js:55:50]
    [at async plugins (/Users/dikim02/Documents/cafe24/my/irusol-landing/node_modules/tailwindcss/lib/plugin.js:38:17)]
    [at async LazyResult.runAsync (turbopack:///[project]/node_modules/postcss/lib/lazy-result.js:293:11)]
    [at async transform (turbopack:///[turbopack-node]/transforms/postcss.ts:70:34)]
    [at async run (turbopack:///[turbopack-node]/ipc/evaluate.ts:92:23)]

Import trace:
  Client Component Browser:
    ./app/globals.css [Client Component Browser]
    ./app/layout.tsx [Server Component] @ http://localhost:3002/_next/static/chunks/node_modules_next_dist_5b402162._.js:1747
[   17226ms] [ERROR] ./app/globals.css:1263:8
Parsing CSS source code failed
  1261 | }
  1262 |
> 1263 | @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css');
       |        ^
  1264 |
  1265 | /* Design Philosophy: Organic Gamification
  1266 |  * - Natural growth curves with soft flowing shapes

@import rules must precede all rules aside from @charset and @layer statements

Import trace:
  Client Component Browser:
    ./app/globals.css [Client Component Browser]
    ./app/layout.tsx [Server Component] @ http://localhost:3002/_next/static/chunks/node_modules_next_dist_5b402162._.js:1747
[   41216ms] [ERROR] ./app/globals.css:1263:8
Parsing CSS source code failed
  1261 | }
  1262 |
> 1263 | @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css');
       |        ^
  1264 |
  1265 | /* Design Philosophy: Organic Gamification
  1266 |  * - Natural growth curves with soft flowing shapes

@import rules must precede all rules aside from @charset and @layer statements

Import trace:
  Client Component Browser:
    ./app/globals.css [Client Component Browser]
    ./app/layout.tsx [Server Component] @ http://localhost:3002/_next/static/chunks/node_modules_next_dist_5b402162._.js:1747
